# ui-cli

./: .dockerignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md  USERGUIDE.md  docker-compose.yml  docker-entrypoint.sh  index.html  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
changelog/: index.html
commands/: index.html
commands/cloud/: index.html
commands/local/: index.html
commands/mcp/: index.html
configuration/: index.html
docs/plans/: mcp-server-v2.md
examples/: index.html
getting-started/: index.html
groups/: index.html
installation/: index.html
overrides/: home.html
plans/mcp-server-v2/: index.html
search/: search_index.json
src/ui_cli/: local_client.py  main.py  output.py
src/ui_cli/commands/: mcp.py  speedtest.py  status.py
src/ui_cli/commands/local/: __init__.py  clients.py  config.py  devices.py  dpi.py  events.py  firewall.py  health.py  networks.py  portfwd.py  stats.py  vouchers.py
src/ui_mcp/: ARCHITECTURE.md  README.md  __init__.py  cli_runner.py  server.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_local_controller_api.py  test_site_manager_api.py
tests/unit/: __init__.py  test_formatting.py  test_local_client.py  test_output.py  test_site_manager_client.py
troubleshooting/: index.html
